--- a/sahar2.css
+++ b/sahar2.css
@@ -66,7 +66,7 @@ background: linear-gradient(
  }
 
 .bg {
-    background-color: #9f2222
+    background-color: #9f2222!important;
 }
 
 #des3,#des4 {
